public/assets/css/style.css
/* ... */
@media (max-width: 410px){
    .right_subCate_listingMainBox .product_list_box {
        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
        gap: 5px;
    }
    .offer-price,
    .product_unavailable_title {
        font-size: 11px;
    }
    .product_name{
        height: 40px;
    }
    button.qty-btn,
    button.qty-btn1,
    .qtyBox .input-qty{
        height: 26px;
    }
    .header_icons_box #menu_mainbox {
        width: auto;
    }
}
@media (max-width: 380px){
    .right_subCate_listingMainBox .product_list_box {
        grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
        gap: 5px;
    }
    .product_unavailable_title {
        font-size: 11px;
    }
}

